# somewm

./: .busted  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVIATIONS.md  LICENSE  Makefile  README.md  UPSTREAM_PORTS.md  animation.c  animation.h  announcement.md  banning.c  banning.h  bench.c  bench.h  check_config.c  check_config.h  clay_layout.c  clay_layout.h  client.h  color.c  color.h  config.mk  dbus.c  default.nix  draw.c  draw.h  event.c  event.h  event_queue.c  event_queue.h  ewmh.c  ewmh.h  flake.nix  focus.c  focus.h  gesture.c  (+69 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md  question.yml  upstream_port.yml
.github/workflows/: ci.yml
common/: array.h  buffer.c  buffer.h  luaclass.c  luaclass.h  lualib.c  lualib.h  luaobject.c  luaobject.h  signal.h  util.c  util.h
contrib/systemd/: somewm-session.sh  somewm-shutdown.target  somewm.service.in
docs/: howtonix.md
icons/lucide/: LICENSE
lua/: lockscreen.lua
lua/awful/: _compat.lua  accessibility.lua  anim_client.lua  client.lua  gesture.lua  init.lua  input.lua  ipc.lua  key.lua  keygrabber.lua  placement.lua  popup.lua  prompt.lua  root.lua  screen.lua  screenrecord.lua  screenshot.lua  spawn.lua  statusnotifierwatcher.lua  systray.lua  tag.lua  test_marker.lua  titlebar.lua  tooltip.lua  wallpaper.lua  wibar.lua
lua/awful/hotkeys_popup/: widget.lua
lua/awful/layout/: clay.lua  init.lua
lua/awful/mouse/: client.lua  init.lua  snap.lua
lua/awful/permissions/: init.lua
lua/awful/widget/: clienticon.lua  common.lua  init.lua  keyboardlayout.lua  layoutbox.lua  layoutlist.lua  prompt.lua  taglist.lua  tasklist.lua
lua/beautiful/: gtk.lua  init.lua
lua/debug/: focus_tracker.lua
lua/gears/: bitwise.lua  filesystem.lua  surface.lua  timer.lua  xresources.lua
lua/gears/sort/: init.lua  topological.lua
lua/lib/wibox.old/: init.lua  (+2 more)
lua/menubar/: init.lua  utils.lua
lua/naughty/: core.lua  dbus.lua  notification.lua
lua/ruled/: client.lua  init.lua  layer_surface.lua
lua/somewm/: init.lua  layout_animation.lua  tag_slide.lua
lua/wibox/: drawable.lua  hierarchy.lua  init.lua
objects/: awesome.c  awesome.h  button.c  button.h  client.c  client.h  client_types_backup.txt  drawable.c  drawable.h  drawin.c  drawin.h  gesture.h  ipc.c  ipc.h  key.c  key.h  keybinding.c  keybinding.h  keygrabber.h  layer_surface.c  layer_surface.h  luaa.h  mouse.h  mousegrabber.h  output.c  output.h  root.h  screen.c  screen.h  selection_acquire.c  selection_acquire.h  selection_getter.c  selection_getter.h  selection_transfer.c  selection_transfer.h  selection_watcher.c  selection_watcher.h  signal.c  signal.h  spawn.h  (+10 more)
plans/: alfa-focus-dispatch.md  animation-config.md  animation-status.md  capture-focus-log.sh  cold-restart-session.md  debug-focus.lua  debug-wayland-compare.sh  fix-137-xwayland-keyboard-focus.md  fix-hot-reload-lgi-closures.md  fix-keyboard-focus-desync.md  fix-multi-monitor-hotplug.md  fix-pointer-enter-layer-surfaces.md  fix-stale-border-color-on-unfocus.md  fix-titlebar-geometry-clipping-and-pointer-focus.md  fix-xkb-keyboard-layout-widget-and-switching.md  fix-xwayland-popup-positioning.md  install-and-reboot.sh  install-scenefx.sh  lockscreen-bg-image.md  multi-monitor-hotplug-investigation.md  notification-fx.md  notification-stuck-investigation.md  scenefx-integration.md  somewm-debug-wrapper.sh  somewm-one-components.md  somewm-shell.md  somewm-web-widgets.md  stabilization-issues.md  start-reload-test.sh  start-somewm-debug  start.sh  tag-slide-animation.md  theme-export.sh  unified-animations.md
plans/sessions/: README.md
plans/somewm-one/: anim_client.lua  deploy.sh  rc.lua
plans/somewm-shell/: GUIDE.md  blur-layer-surface-implementation.md  config.default.json  deploy.sh  shell.qml  theme.default.json
plans/somewm-shell-ai/: README.md  config.default.json  shell-ai.qml
plans/upstream/: fork-status.md  sync-2026-03-22.md
scripts/: check-lgi.lua
spec/: carousel_spec.lua  lockscreen_spec.lua  systray_urgency_spec.lua
spec/awful/: gesture_spec.lua  input_spec.lua  keyboardlayout_spec.lua  keygrabber_release_spec.lua  permissions_spec.lua  popup_anchor_spec.lua  test_marker_spec.lua
spec/gears/: filesystem_spec.lua  math_spec.lua  surface_spec.lua
spec/somewm/: layout_spec.lua
spec/wibox/: layout_node_spec.lua
subprojects/: scenefx.wrap  wlroots.wrap
tests/: README.md  TESTING.md  _async.lua  _client.lua  _layout_helpers.lua  _lock_helper.lua  _runner.lua  _state.lua  _utils.lua  _x11_client.lua  rc.lua  run-integration.sh  run-unit.sh  smoke-hotplug.sh  test-api-level.lua  test-async-example.lua  test-carousel-animation.lua  test-carousel-centering-modes.lua  test-carousel-column-movement.lua  test-carousel-column-widths.lua  test-carousel-columns.lua  test-carousel-edge-focus.lua  test-carousel-focus-navigation.lua  test-carousel-gesture-scrolling.lua  test-carousel-layout.lua  test-carousel-peek.lua  test-carousel-push-window.lua  test-carousel-regression-bugs.lua  test-carousel-stacking.lua  test-carousel-strip-boundaries.lua  test-carousel-vertical-animation.lua  test-carousel-vertical-basic.lua  test-carousel-vertical-focus.lua  test-carousel-vertical-operations.lua  test-check-mode.sh  test-clay-apply-unmanaged.lua  test-clay-attach-to-root.lua  test-clay-carousel-reflected.lua  test-clay-context-screen.lua  test-clay-corner.lua  (+182 more)
tests/bench/: bench-client-churn.lua  bench-focus-cycle.lua  bench-geometry-storm.lua  bench-helpers.lua  bench-memory-runner.sh  bench-memory-trend.lua  bench-save-baseline.sh  bench-stats.lua  bench-tag-switch.lua  profile-session.sh  profile-workload.sh  run-all.sh
tests/helpers/: x11_override_redirect.py  x11_unmap_remap.py  x11_window_type.py
themes/: CREDITS
themes/catppuccin/: theme.lua
themes/default/: theme.lua
themes/gruvbox/: theme.lua
themes/gtk/: theme.lua
themes/nord/: theme.lua
themes/sky/: theme.lua
themes/xresources/: theme.lua
themes/zenburn/: theme.lua
(+206 files in other folders)
