option(
  'xwayland',
  type: 'feature',
  value: 'auto',
  description: 'Enable Xwayland support',
)

option(
  'pam',
  type: 'feature',
  value: 'auto',
  description: 'Enable PAM authentication for lock screen',
)

option(
  'test_pam',
  type: 'boolean',
  value: false,
  description: 'Use test PAM stub that accepts a hardcoded password',
)

option(
  'scenefx',
  type: 'feature',
  value: 'auto',
  description: 'Enable scenefx visual effects (rounded corners, shadows, blur)',
)
