option(
  'xwayland',
  type: 'feature',
  value: 'auto',
  description: 'Enable Xwayland support',
)

option(
  'pam',
  type: 'feature',
  value: 'auto',
  description: 'Enable PAM authentication for lock screen',
)

option(
  'test_pam',
  type: 'boolean',
  value: false,
  description: 'Use test PAM stub that accepts a hardcoded password',
)

option(
  'systemd',
  type: 'feature',
  value: 'auto',
  description: 'Install systemd user service and session wrapper',
)

option(
  'bench',
  type: 'boolean',
  value: false,
  description: 'Enable benchmark instrumentation counters',
)

option(
  'lua_pkg',
  type: 'string',
  value: '',
  description: 'Force a specific Lua pkg-config name (e.g. lua5.5, luajit). Empty = autodetect (LuaJIT > 5.5 > 5.4 > ... > 5.1).',
)
